--- a/.env
+++ b/.env
@@ -5,6 +5,6 @@ SECRET_KEY='django-insecure-^hj=1!(fe!*&2ertylfo12^l%n%z%-mmr!3^sy=b_2=zbfreq%@5
 POSTGRES_DB=db
 POSTGRES_USER=db_admuser
 POSTGRES_PASSWORD=db_ZAQ12345tgb*
-POSTGRES_HOST=127.0.0.1
+POSTGRES_HOST=db
 POSTGRES_PORT=5432
 DEBUG=False
