add req.txt deepface

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 
-SECRET_KEY='django-insecure-^hj=1!(fe!*&2ertylfo12^l%n%z%-mmr!3^sy=b_2=zbfreq%@5e3jh'
+SECRET_KEY='django-insecure-^hj=1!(fe!*&2ertylfczo12^l%n%z%-mmr!3^sy=b_2=zbfreq%@5e3jh'
 
 
 POSTGRES_DB=db
