update all code

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 
-SECRET_KEY='django-insecure-^hj=1!(fe!*&2ertylfczo12^l%n%z%-mmr!3^sy=b_2=zbfreq%@5e3jh'
+SECRET_KEY='2xR~*cfdfc|L$LD~5mlxJduiK0elcDGQ4BxPYQn5}Sxsz3GBzO%gkY8rydxkKPGR?W3RAS~~?e4ZB4uok8Da7R2oe@SwM0orz|X'
 
 
 POSTGRES_DB=db
